// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`HTML Converter oboToSlate converts an OboNode to a Slate node 1`] = `
Object {
  "children": Array [
    Object {
      "text": undefined,
    },
  ],
  "content": Object {},
  "id": "mockKey",
  "type": "mockType",
}
`;

exports[`HTML Converter oboToSlate converts an OboNode to a Slate node with triggers 1`] = `
Object {
  "children": Array [
    Object {
      "text": undefined,
    },
  ],
  "content": Object {
    "triggers": "mock-triggers",
  },
  "id": "mockKey",
  "type": "mockType",
}
`;

exports[`HTML Converter slateToObo converts a Slate node to an OboNode with content 1`] = `
Object {
  "children": Array [],
  "content": Object {
    "html": "mockText",
  },
  "id": "mockKey",
  "type": "mockType",
}
`;

exports[`HTML Converter slateToObo converts a Slate node to an OboNode with triggers 1`] = `
Object {
  "children": Array [],
  "content": Object {
    "html": "mockText",
    "triggers": "mock-triggers",
  },
  "id": "mockKey",
  "type": "mockType",
}
`;
